@@ -403,6 +403,14 @@ archive.  Valid types are
 and
 .B "subject."
 .TP
+.B avoid_indices = which_index_files_not_to_use
+This is a list of index files to not generate. Valid types are
+.B "date,"
+.B "thread,"
+.B "author,"
+and
+.B "subject."
+.TP
 .B ihtmlheaderfile = path
 Define path as the path to a template file containing valid HTML formatting 
 statements that you wish to included at the top of every index page.  Hypermail
